master2とマージした

--- a/TeamC/Base.lproj/Main.storyboard
+++ b/TeamC/Base.lproj/Main.storyboard
@@ -14,10 +14,28 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="cEF-0m-ccS"/>
+                    <connections>
+                        <segue destination="rkc-Iw-1tG" kind="modal" identifier="map" id="wrC-hu-8k5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="244" y="-42"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pMg-Ua-qnW">
+            <objects>
+                <viewController id="rkc-Iw-1tG" customClass="ViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iUP-HF-DcI">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="yhH-PS-J3d"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="he9-At-3Kb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="672" y="-42"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
